@@ -491,6 +491,8 @@ AC_ARG_VAR([r_arch],
 AC_ARG_VAR([DEFS], [C defines for use when compiling R])
 AC_ARG_VAR([JAVA_HOME],
            [Path to the root of the Java environment])
+AC_ARG_VAR([R_SHELL],
+           [shell to be used for shell scripts, including 'R'])
 
 if test -z "${r_arch}"; then
   R_ARCH=
@@ -2319,6 +2321,11 @@ case "${host_os}" in
 esac
 AC_SUBST(OSF_SH_BUG)
 
+### shell for use in scripts: we allow R_SHELL to set the script,
+### since some AIX systems have zsh as sh.
+: ${R_SHELL="/bin/sh"}
+AC_SUBST(R_SHELL)
+
 
 ### * Win32 overrides
 case "${host_os}" in
@@ -2412,16 +2419,28 @@ AC_CONFIG_FILES(
   src/nmath/Makefile
   src/nmath/standalone/Makefile
   src/scripts/Makefile
+  src/scripts/BATCH
   src/scripts/COMPILE
   src/scripts/INSTALL
+  src/scripts/LINK
   src/scripts/REMOVE
   src/scripts/R.sh
+  src/scripts/Rcmd
+  src/scripts/Rd2dvi
+  src/scripts/Rd2txt
   src/scripts/Rdconv
+  src/scripts/Rdiff
   src/scripts/Rprof
   src/scripts/SHLIB
   src/scripts/Sd2Rd
+  src/scripts/Stangle
+  src/scripts/Sweave
   src/scripts/build
   src/scripts/check
+  src/scripts/config
+  src/scripts/f77_f2c
+  src/scripts/javareconf
+  src/scripts/pager
   src/unix/Makefile
   tests/Makefile
   tests/Embedding/Makefile
