@@ -1,4 +1,4 @@
-#! /bin/sh
+#!@R_SHELL@
 
 ## Rd2dvi -- Convert man pages (*.Rd help files) via LaTeX to DVI/PDF.
 ##
