@@ -1,4 +1,4 @@
-#!/bin/sh
+#!@R_SHELL@
 ##
 ## Rd2txt -- Convert man pages (*.Rd help files) to plain text.
 
