@@ -1,4 +1,4 @@
-#! /bin/sh
+#!@R_SHELL@
 ##
 ## Rdiff -- diff 'without R version'
 
