@@ -1,4 +1,4 @@
-#!/bin/sh
+#!@R_SHELL@
 ## For the curious: "pager $1" doesn't work in batch, because "more" will
 ## eat the rest of stdin.  The no-argument version is intended for use at
 ## the end of a pipeline.
